# plover_vietneo

./: LICENSE  MANIFEST.in  README.md  install_vietneo.bat  setup.cfg  setup.py
plover_vietneo/: system.py
plover_vietneo/dictionaries/: vietneo_commands.json  vietneo_main.json  vietneo_shorthand.json  vietneo_shothand_generated.json
