[metadata]
name = plover_vietneo
version = 0.1.0
description = Vietnamese support for Plover
long_description = file: README.md
long_description_content_type = text/markdown
author = Nguyen Tran
author_email = merlinvn@gmail.com
license = MIT
url = https://github.com/merlinvn/plover-vietneo
project_urls =
	Source Code = https://github.com/merlinvn/plover-vietneo/
	Issue Tracker = https://github.com/merlinvn/plover-vietneo/issues
classifiers =
	Development Status :: 4 - Beta
	Environment :: Plugins
	Intended Audience :: End Users/Desktop
	License :: OSI Approved :: MIT
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
keywords = plover plover_plugin vietnamese

[options]
zip_safe = True
python_requires = >=3.6
install_requires =
	plover>=4.0.0.dev9
include_package_data = True
packages =
	plover_vietneo

[options.extras_require]
test =
	plover>=4.0.0.dev9
	pytest>=3.0.1

[options.entry_points]
plover.system =
	Vietnamese Stenotype by merlinvn = plover_vietneo.system
